syntax = "proto3";

package raw;

option go_package = "./raw";


message User {
    int32 user_id = 1;
    string birthdate = 2;
}

message UserBatch {
    repeated User users = 1;
}